# shaggy

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/chat/: handler.rs
src/music/: commands.rs  mod.rs  models.rs  utils.rs
src/recipe/: commands.rs  mod.rs  models.rs  utils.rs
src/reminder/: commands.rs  mod.rs  models.rs
src/shared/: commands.rs  db.rs  mod.rs  scheduler.rs  types.rs  utils.rs
src/voice/: commands.rs  utils.rs
