[package]
name = "shaggy"
version = "0.1.3"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.15.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
rand = "0.9"
tracing = "0.1.41"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
songbird = { version = "0.5.0" }
